<resources>
    <string name="app_name">Airness</string>
    <string name="action_settings">Settings</string>
    <string name="previous">Retour</string>
    <string name="price">Prix</string>
    <string name="product_name">Nom du produit</string>
    <string name="name">Nom</string>
    <string name="search_hint">Rechercher un meuble</string>
    <string name="settings">Paramètres</string>

    <!-- Menu -->
    <string name="home">Accueil</string>
    <string name="category">Catégories</string>
    <string name="products">Produits</string>

    <!-- Home -->
    <string name="home_page_title">Nouveautés artisanales</string>
    <string name="home_page_catchphrase_dark">SOLUTION ARTISANALE</string>
    <string name="home_page_catchphrase_light_dark">POUR VOTRE MOBILIER DE QUALITÉ</string>
    <string name="home_page_info_light_dark">Découvrez notre collection de meubles artisanaux fabriqués avec des matériaux de qualité en France par des artisans passionnés.</string>
    <string name="home_page_partners">Découvrez nos partenaires de confiance</string>
    <string name="button_products">Nos produits</string>
    <string name="button_categories">Découvrir nos catégories</string>
    <string name="meuble_image">Image de meuble</string>

    <!-- Meuble -->
    <string name="meuble_page_add_basket">Ajouter au panier</string>
    <string name="meuble_page_see_product">Voir le produit</string>

    <!-- Sort Options -->
    <string-array name="sort_options">
        <item>Trier par nom</item>
        <item>Trier par prix</item>
    </string-array>

    <!-- Partners -->
    <string name="amazon">https://www.amazon.fr/</string>
    <string name="netflix">https://www.netflix.fr/</string>
    <string name="google">https://www.google.fr/</string>
    <string name="microsoft">https://www.microsoft.fr/</string>

    <!-- basket -->
    <string name="cart">Panier</string>
    <string name="total_price">Prix Total: %1$s €</string>
    <string name="checkout">Valider le panier</string>

    <!-- checkout -->
    <string name="address">Adresse</string>
    <string name="city">Ville</string>
    <string name="postal_code">Code Postal</string>
    <string name="country">Pays</string>
    <string name="place_order">Passer une commande</string>
    <string name="payment_details">Détails de paiement</string>
    <string name="card_number">Numéro de carte (XXXX-XXXX-XXXX-XXXX)</string>
    <string name="card_expiry">Expiration de la carte (MM/YY)</string>
    <string name="card_cvc">CVC de la carte</string>
    <string name="free_shipping">Livraison gratuite (0€)</string>
    <string name="paid_shipping">Livraison payante (20€)</string>
</resources>
