<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/editTextCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/country" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />

        <EditText
            android:id="@+id/editTextPostalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postal_code" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment_details"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number" />

        <EditText
            android:id="@+id/editTextCardExpiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_expiry" />

        <EditText
            android:id="@+id/editTextCardCVC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_cvc" />

        <CheckBox
            android:id="@+id/checkBoxFreeShipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/free_shipping" />

        <CheckBox
            android:id="@+id/checkBoxPaidShipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paid_shipping" />

        <Button
            android:id="@+id/buttonPlaceOrder"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_order" />
    </LinearLayout>
</ScrollView>
