<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageViewProduct"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/textViewProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textViewProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name"
            android:textAllCaps="true"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="12sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonAddToCart"
            style="@style/AddToCartButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/meuble_page_add_basket" />

        <Button
            android:id="@+id/buttonViewProduct"
            style="@style/ShowProductButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meuble_page_see_product" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
